--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -223,7 +223,7 @@ windowrule = float,class:^blueberry.py$
 windowrule = float,class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
 windowrule = center, class:^(org.freedesktop.impl.portal.desktop.kde)$
 windowrule = size 1280 720,class:^(org.freedesktop.impl.portal.desktop.kde)$
-windowrule = size 700 500 class:^(org.pulseaudio.pavucontrol|Wiremix)$
+windowrule = size 700 500, class:^(org.pulseaudio.pavucontrol|Wiremix)$
 
 windowrule = float,class:^org.kde.gwenview$
 windowrule = size 65% 65%,class:^org.kde.gwenview$
@@ -231,7 +231,13 @@ windowrule = size 65% 65%,class:^org.kde.gwenview$
 windowrule = float,class:^kitty$ title:^(float-.*)$
 windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
 
+# Floating windows
+windowrule = float, tag:floating-window
+windowrule = center, tag:floating-window
+windowrule = size 800 600, tag:floating-window
 
+windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|Omarchy|About|TUI.float)
+windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
 
 # No Screen share windows
 windowrule = noscreenshare, class:^(Bitwarden)$
@@ -253,10 +259,10 @@ windowrule = move onscreen 100%-w-20,class:^(zen)$,title:^(Picture-in-Picture)$
 windowrule = float,class:^brave-.*-Default$
 
 # Emacs
-windowrule = workspace 3,class:^(emacs)$
-windowrule = float,class:^(emacs)$,title:^(Ediff)$
-windowrule = size 780 410,class:^(emacs)$,title:^(Ediff)$
-windowrule = move onscreen 100%-w-20,class:^(emacs)$,title:^(Ediff)$
+windowrule = float,class:^(emacs)$,title:^(Ediff.*)$
+windowrule = size 780 410,class:^(emacs)$,title:^(Ediff.*)$
+windowrule = move onscreen 100%-w-20,class:^(emacs)$,title:^(Ediff.*)$
+windowrule = float,class:^(emacs)$,title:^(emacs-float)$
 
 # Message App
 windowrule = workspace 1,class:^(.*Microsoft Teams.*|teams-for-linux|discord|WebCord|Slack)$
@@ -271,7 +277,7 @@ windowrule = move 100%-w-70 100%-w-45, title:WebcamOverlay # There's a typo in t
 
 # All
 windowrule = opaque 1,class:^(.*)$
-windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
+# windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
 windowrule = idleinhibit fullscreen, class:.*
 
 layerrule = noanim, selection
@@ -304,8 +310,9 @@ $wlogout = ~/.config/hypr/scripts/wlogout.sh
 $colorpicker = ~/.config/hypr/scripts/colorpicker.sh
 $files = uwsm-app -- dolphin
 $editor = uwsm-app -- emacsclient -c -n -a 'emacs'
-$editor-term = $term -e emacsclient -t -a 'emacs -nw'
-$editor-everywhere = emacsclient --eval "(emacs-everywhere)"
+$editor-term = $term2 -e emacsclient -t -a 'emacs -nw'
+$editor-everywhere = emacsclient --eval '(thanos/type)'
+
 $browser = uwsm-app -- zen-browser
 $help_keybind = ~/.config/hypr/scripts/show_keybind.sh
 $screenshot = ~/.config/hypr/scripts/screenshot.sh
@@ -325,7 +332,7 @@ bindd = $mainMod, ccedilla, Launch K9s, exec, $termapp k9s
 bindd = $mainMod, m, Launch Btop, exec, $termapp btop
 
 bindd = $mainMod, D, Launch AppMenu, exec, $appmenu
-bindd = $mainMod SHIFT, D, Launch AppMenu, exec, $appmenu2
+bindd = $mainMod SHIFT, D, Launch AppMenu, exec, hyprlauncher
 bindd = $mainMod, X, Launch PowerMenu, exec, $powermenu
 bindd = $mainMod, W, Launch WallpaperMenu, exec, $wallpapermenu
 bindd = $mainMod, T, Launch ThemeMenu, exec, $thememenu
@@ -442,14 +449,14 @@ bindd = $mainMod SHIFT, minus, Move to workspace 6, movetoworkspace, 6
 bindd = $mainMod SHIFT, egrave, Move to workspace 7, movetoworkspace, 7
 bindd = $mainMod SHIFT, underscore, Move to workspace 8, movetoworkspace, 8
 
-bindd = $mainMod CTRL, ampersand, Move workspace 1 silently, movetoworkspacesilent, 1
-bindd = $mainMod CTRL, eacute, Move workspace 2 silently, movetoworkspacesilent, 2
-bindd = $mainMod CTRL, quotedbl, Move workspace 3 silently, movetoworkspacesilent, 3
-bindd = $mainMod CTRL, apostrophe, Move workspace 4 silently, movetoworkspacesilent, 4
-bindd = $mainMod CTRL, parenleft, Move workspace 5 silently, movetoworkspacesilent, 5
-bindd = $mainMod CTRL, minus, Move workspace 6 silently, movetoworkspacesilent, 6
-bindd = $mainMod CTRL, egrave, Move workspace 7 silently, movetoworkspacesilent, 7
-bindd = $mainMod CTRL, underscore, Move workspace 8 silently, movetoworkspacesilent, 8
+bindd = $mainMod ALT, ampersand, Move workspace 1 silently, movetoworkspacesilent, 1
+bindd = $mainMod ALT, eacute, Move workspace 2 silently, movetoworkspacesilent, 2
+bindd = $mainMod ALT, quotedbl, Move workspace 3 silently, movetoworkspacesilent, 3
+bindd = $mainMod ALT, apostrophe, Move workspace 4 silently, movetoworkspacesilent, 4
+bindd = $mainMod ALT, parenleft, Move workspace 5 silently, movetoworkspacesilent, 5
+bindd = $mainMod ALT, minus, Move workspace 6 silently, movetoworkspacesilent, 6
+bindd = $mainMod ALT, egrave, Move workspace 7 silently, movetoworkspacesilent, 7
+bindd = $mainMod ALT, underscore, Move workspace 8 silently, movetoworkspacesilent, 8
 
 bindd = SUPER, V, Open clipboard, exec, $clipboardlist
 
