[UP] better windowrules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -211,36 +211,38 @@ render {
 }
 
 # Float Necessary Windows
-windowrule = float,class:^waypaper$
-windowrule = float,class:^org.pulseaudio.pavucontrol$
-windowrule = float,class:^Wiremix$
-windowrule = float,class:^foot-float$
-windowrule = float,class:^nm-connection-editor$
-windowrule = float,class:^Gimp$
-windowrule = float,class:^blueman-manager$
-windowrule = float,class:^org.twosheds.iwgtk$
-windowrule = float,class:^blueberry.py$
-windowrule = float,class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
+windowrule = float, class:^waypaper$
+windowrule = float, class:^org.pulseaudio.pavucontrol$
+windowrule = float, class:^Wiremix$
+windowrule = float, class:^foot-float$
+windowrule = float, class:^nm-connection-editor$
+windowrule = float, class:^Gimp$
+windowrule = float, class:^blueman-manager$
+windowrule = float, class:^org.twosheds.iwgtk$
+windowrule = float, class:^blueberry.py$
+windowrule = float, class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
 windowrule = center, class:^(org.freedesktop.impl.portal.desktop.kde)$
-windowrule = size 1280 720,class:^(org.freedesktop.impl.portal.desktop.kde)$
+windowrule = size 1280 720, class:^(org.freedesktop.impl.portal.desktop.kde)$
 windowrule = size 700 500, class:^(org.pulseaudio.pavucontrol|Wiremix)$
 
-windowrule = float,class:^org.kde.gwenview$
-windowrule = size 65% 65%,class:^org.kde.gwenview$
+windowrule = float, class:^org.kde.gwenview$
+windowrule = size 65% 65%, class:^org.kde.gwenview$
 
-windowrule = float,class:^kitty$ title:^(float-.*)$
-windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
+windowrule = float, class:^kitty$, title:^(float-.*)$
+windowrule = size 50% 50%, class:^kitty$, title:^(float-.*)$
+windowrule = tag +floating-window, class:^kitty$, title:^(float-.*)$
 
 # Floating windows
 windowrule = float, tag:floating-window
 windowrule = center, tag:floating-window
-windowrule = size 800 600, tag:floating-window
+windowrule = size 875 600, tag:floating-window
 
-windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|Omarchy|About|TUI.float)
+windowrule = tag +floating-window, class:(blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty|About|TUI.float)
 windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
 
 # No Screen share windows
-windowrule = noscreenshare, class:^(Bitwarden)$
+windowrule = float, title:^(.*Bitwarden.*)$
+windowrule = noscreenshare, title:^(.*Bitwarden.*)$
 
 # Gnome Settings
 windowrule = float,class:^(org.gnome.Settings)$
