[ADD] pop script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -240,6 +240,9 @@ windowrule = size 875 600, tag:floating-window
 windowrule = tag +floating-window, class:(blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty|About|TUI.float)
 windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
 
+# Popped window rounding
+windowrule = rounding 8, tag:pop
+
 # No Screen share windows
 windowrule = float, title:^(.*Bitwarden.*)$
 windowrule = noscreenshare, title:^(.*Bitwarden.*)$
@@ -372,7 +375,7 @@ bindd = $mainMod, Q, Kill Active, killactive,
 bindd = $mainMod, F, Fullscreen, fullscreen, 2
 bindd = $mainMod CTRL, F, Fullscreen complete, fullscreen, 0
 bindd = $mainMod SHIFT, F, Fullscreen Window in Workspace, fullscreen, 1
-bindd = $mainMod, SPACE, Toggle Floating, togglefloating,
+bindd = $mainMod, SPACE, Pop window, exec, ~/.config/hypr/scripts/window-pop.sh
 bindd = $mainMod SHIFT, SPACE, ToggleSplit, togglesplit, # dwindle
 bindd = $mainMod, P, Pseudo Window, pseudo, # dwindle
 bindd = $mainMod, O, Toggle Opacity, exec, hyprctl dispatch setprop active opaque toggle
