[UP] no screen share for notifications

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -292,6 +292,7 @@ layerrule = dimaround, rofi
 layerrule = dimaround, walker
 layerrule = animation slide, swaync-control-center
 layerrule = blur, swaync-control-center
+layerrule = noscreenshare, swaync-control-center
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
