--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -90,7 +90,7 @@ general {
     gaps_out = 10
     border_size = 2
     layout = dwindle
-    col.active_border = $color4 $color6 45deg
+    col.active_border = $color4
     col.inactive_border = $color8
     allow_tearing = false
     snap {
