--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,7 +59,7 @@ exec-once = nm-applet --indicator
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
-exec-once = hyprctl setcursor Qogir-dark 24 #19
+exec-once = hyprctl setcursor Qogir-Dark 24
 
 exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=false --initial-window=false
 
