[UP] adapt to hyprland v0.53.0

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -211,94 +211,94 @@ render {
 }
 
 # Float Necessary Windows
-windowrule = float, class:^waypaper$
-windowrule = float, class:^org.pulseaudio.pavucontrol$
-windowrule = float, class:^Wiremix$
-windowrule = float, class:^foot-float$
-windowrule = float, class:^nm-connection-editor$
-windowrule = float, class:^Gimp$
-windowrule = float, class:^blueman-manager$
-windowrule = float, class:^org.twosheds.iwgtk$
-windowrule = float, class:^blueberry.py$
-windowrule = float, class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
-windowrule = center, class:^(org.freedesktop.impl.portal.desktop.kde)$
-windowrule = size 1280 720, class:^(org.freedesktop.impl.portal.desktop.kde)$
-windowrule = size 700 500, class:^(org.pulseaudio.pavucontrol|Wiremix)$
+windowrule = float on, match:class ^waypaper$
+windowrule = float on, match:class ^org.pulseaudio.pavucontrol$
+windowrule = float on, match:class ^Wiremix$
+windowrule = float on, match:class ^foot-float$
+windowrule = float on, match:class ^nm-connection-editor$
+windowrule = float on, match:class ^Gimp$
+windowrule = float on, match:class ^blueman-manager$
+windowrule = float on, match:class ^org.twosheds.iwgtk$
+windowrule = float on, match:class ^blueberry.py$
+windowrule = float on, match:class ^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
+windowrule = center on, match:class ^(org.freedesktop.impl.portal.desktop.kde)$
+windowrule = size 1280 720, match:class ^(org.freedesktop.impl.portal.desktop.kde)$
+windowrule = size 700 500, match:class ^(org.pulseaudio.pavucontrol|Wiremix)$
 
-windowrule = float, class:^org.kde.gwenview$
-windowrule = size 65% 65%, class:^org.kde.gwenview$
+windowrule = float on, match:class ^org.kde.gwenview$
+windowrule = size 65% 65%, match:class ^org.kde.gwenview$
 
-windowrule = float, class:^kitty$, title:^(float-.*)$
-windowrule = size 50% 50%, class:^kitty$, title:^(float-.*)$
-windowrule = tag +floating-window, class:^kitty$, title:^(float-.*)$
+windowrule = float on, match:title ^(float-.*)$
+windowrule = size 50% 50%, match:title ^(float-.*)$
+windowrule = tag +floating-window, match:title ^(float-.*)$
 
 # Floating windows
-windowrule = float, tag:floating-window
-windowrule = center, tag:floating-window
-windowrule = size 875 600, tag:floating-window
+windowrule = float on, match:tag floating-window
+windowrule = center on, match:tag floating-window
+windowrule = size 875 600, match:tag floating-window
 
-windowrule = tag +floating-window, class:(blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty|About|TUI.float)
-windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
+windowrule = tag +floating-window, match:class (blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty|About|TUI.float)
+windowrule = tag +floating-window, match:class (xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus|waypaper|Wiremix), match:title ^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
 
 # Popped window rounding
-windowrule = rounding 8, tag:pop
+windowrule = rounding 8, match:tag pop
 
 # No Screen share windows
-windowrule = float, title:^(.*Bitwarden.*)$
-windowrule = noscreenshare, title:^(.*Bitwarden.*)$
+windowrule = float on, match:title ^(.*Bitwarden.*)$
+windowrule = no_screen_share on, match:title ^(.*Bitwarden.*)$
 
 # Gnome Settings
-windowrule = float,class:^(org.gnome.Settings)$
-windowrule = center,class:^(org.gnome.Settings)$
-windowrule = size 1280 720,class:^(org.gnome.Settings)$
+windowrule = float on, match:class ^(org.gnome.Settings)$
+windowrule = center on, match:class ^(org.gnome.Settings)$
+windowrule = size 1280 720, match:class ^(org.gnome.Settings)$
 
 # Browser
-windowrule = workspace 2,class:^brave-browser$
-windowrule = workspace 2,class:^zen$
-windowrule = float,class:^(brave)$,title:^(Open File)$
-windowrule = float,class:^(brave)$,title:^(Save File)$
-windowrule = float,class:^(brave)$,title:^(Picture in picture)$
-windowrule = float,class:^(zen)$,title:^(Picture-in-Picture)$
-windowrule = size 740 440,class:^(zen)$,title:^(Picture-in-Picture)$
-windowrule = move onscreen 100%-w-20,class:^(zen)$,title:^(Picture-in-Picture)$
-windowrule = float,class:^brave-.*-Default$
+windowrule = workspace 2, match:class ^brave-browser$
+windowrule = workspace 2, match:class ^zen$
+windowrule = float on, match:class ^(brave)$, match:title ^(Open File)$
+windowrule = float on, match:class ^(brave)$, match:title ^(Save File)$
+windowrule = float on, match:class ^(brave)$, match:title ^(Picture in picture)$
+windowrule = float on, match:class ^(zen)$, match:title ^(Picture-in-Picture)$
+windowrule = size 740 440, match:class ^(zen)$, match:title ^(Picture-in-Picture)$
+windowrule = move onscreen 100%-w-20, match:class ^(zen)$, match:title ^(Picture-in-Picture)$
+windowrule = float on, match:class ^brave-.*-Default$
 
 # Emacs
-windowrule = float,class:^(emacs)$,title:^(Ediff.*)$
-windowrule = size 780 410,class:^(emacs)$,title:^(Ediff.*)$
-windowrule = move onscreen 100%-w-20,class:^(emacs)$,title:^(Ediff.*)$
-windowrule = float,class:^(emacs)$,title:^(emacs-float)$
+windowrule = float on, match:class ^(emacs)$, match:title ^(Ediff.*)$
+windowrule = size 780 410, match:class ^(emacs)$, match:title ^(Ediff.*)$
+windowrule = move onscreen 100%-w-20, match:class ^(emacs)$, match:title ^(Ediff.*)$
+windowrule = float on, match:class ^(emacs)$, match:title ^(emacs-float)$
 
 # Message App
-windowrule = workspace 1,class:^(.*Microsoft Teams.*|teams-for-linux|discord|WebCord|Slack)$
-windowrule = workspace 1,class:^()$
+windowrule = workspace 1, match:class ^(.*Microsoft Teams.*|teams-for-linux|discord|WebCord|Slack)$
+windowrule = workspace 1, match:class ^()$
 
 # Webcam overlay for screen recording
-windowrule = float, title:WebcamOverlay
-windowrule = pin, title:WebcamOverlay
-windowrule = noinitialfocus, title:WebcamOverlay
-windowrule = nodim, title:WebcamOverlay
-windowrule = move 100%-w-70 100%-w-45, title:WebcamOverlay # There's a typo in the hyprland rule so 100%-w on the height param is actually correct here
+windowrule = float on, match:title WebcamOverlay
+windowrule = pin on, match:title WebcamOverlay
+windowrule = no_initial_focus on, match:title WebcamOverlay
+windowrule = no_dim on, match:title WebcamOverlay
+windowrule = move 100%-w-70 100%-h-45, match:title WebcamOverlay # There's a typo in the hyprland rule so 100%-w on the height param is actually correct here
 
 # All
-windowrule = opaque 1,class:^(.*)$
-# windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
-windowrule = idleinhibit fullscreen, class:.*
+windowrule = opaque 1, match:class ^(.*)$
+windowrule = opaque 0, match:class ^(kitty|Alacritty|com.mitchellh.ghostty)$
+windowrule = idle_inhibit fullscreen, match:class .*
 
-layerrule = noanim, selection
-layerrule = noanim, wayfreeze
-layerrule = noanim, hyprpicker
-layerrule = dimaround, rofi
-layerrule = dimaround, walker
-layerrule = animation slide, swaync-control-center
-layerrule = blur, swaync-control-center
-layerrule = noscreenshare, swaync-control-center
+layerrule = no_anim on, match:namespace selection
+layerrule = no_anim on, match:namespace wayfreeze
+layerrule = no_anim on, match:namespace hyprpicker
+layerrule = dim_around on, match:namespace rofi
+layerrule = dim_around on, match:namespace walker
+layerrule = animation slide, match:namespace swaync-control-center
+layerrule = blur on, match:namespace swaync-control-center
+layerrule = no_screen_share on, match:namespace swaync-control-center
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$term = uwsm-app -- kitty
-$term2 = uwsm-app -- ghostty --gtk-single-instance=true
+$term = uwsm-app -- ghostty --gtk-single-instance=true
+$term2 = uwsm-app -- kitty
 $termapp = $term -e
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
