--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,5 @@
-preload = ~/.cache/hyprpaper/current-wallpaper
-wallpaper = ,~/.cache/hyprpaper/current-wallpaper # Empty first argument to enable wallpaper on every monitor
+wallpaper {
+    monitor =
+    file = ~/.cache/hyprpaper/current-wallpaper
+    fit_mode = cover
+}
