[UP] disable splash and fix bad keyword

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,7 @@
 wallpaper {
     monitor =
-    file = ~/.cache/hyprpaper/current-wallpaper
+    path = /home/croy/.cache/hyprpaper/current-wallpaper
     fit_mode = cover
 }
+
+splash = false
