--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,14 +1,7 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-cursor-blink=true
-gtk-cursor-blink-time=1000
-gtk-cursor-theme-name=breeze_cursors
+gtk-theme-name=Breeze-Dark
+gtk-icon-theme-name=Cosmic
+gtk-font-name=Noto Sans  10
+gtk-cursor-theme-name=Qogir-Dark
 gtk-cursor-theme-size=24
-gtk-decoration-layout=icon:minimize,maximize,close
-gtk-enable-animations=true
-gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=breeze-dark
-gtk-primary-button-warps-slider=true
-gtk-sound-theme-name=ocean
-gtk-theme-name=Adwaita
-gtk-xft-dpi=147456
+gtk-application-prefer-dark-theme=1
