[UP] border and opacity values for my current mood

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -88,7 +88,7 @@ source = ~/.cache/wal/colors-hyprland.conf
 general {
     gaps_in = 5
     gaps_out = 10
-    border_size = 2
+    border_size = 1
     layout = dwindle
     col.active_border = $color4
     col.inactive_border = $color8
@@ -121,26 +121,24 @@ group {
 }
 
 decoration {
-    active_opacity = 0.95
-    inactive_opacity = 0.95
-    rounding = 0         # original 10
-    # rounding_power = 2.0  # original 2.0
+    active_opacity = 0.75
+    inactive_opacity = 0.75
+    rounding = 2 # original 10
+    rounding_power = 4.0  # original 2.0
     blur {
         enabled = true
         new_optimizations = true
-        size = 6   # minimum 1
+        size = 10   # minimum 1
         passes = 2 # minimum 1, more passes = more resource intensive.
     }
     shadow {
         enabled = false
         range = 8
-        offset = 1 2
-        scale = 0.97
-        color = rgba(1E202966)
-        color_inactive = 0x50000000
+        offset = 0 0
+        render_power = 1
     }
     dim_inactive = true
-    dim_strength = 0.05
+    dim_strength = 0.08
 }
 
 render {
@@ -297,7 +295,7 @@ $wlogout = ~/.config/hypr/scripts/wlogout.sh
 $colorpicker = ~/.config/hypr/scripts/colorpicker.sh
 $files = uwsm-app -- dolphin
 $editor = uwsm-app -- emacsclient -c -n -a 'emacs'
-$editor-term = $term2 -e emacsclient -t -a 'emacs -nw'
+$editor-term = $term -e emacsclient -t -a 'emacs -nw'
 $editor-everywhere = emacsclient --eval '(thanos/type)'
 
 $browser = uwsm-app -- zen-browser
@@ -308,7 +306,7 @@ $screenrecord-menu = ~/.config/hypr/scripts/screenrecord-menu.sh
 
 bindd = $mainMod, Return, Launch Terminal, exec, $term
 bindd = $mainMod SHIFT, Return, Launch Second Terminal, exec, $term2
-bindd = $mainMod CTRL, Return, Launch Floating Terminal, exec, [float; size 50% 60%] $term
+bindd = $mainMod CTRL, Return, Launch Floating Terminal, exec, [float] $term2
 
 bindd = $mainMod, E, Launch File Manager, exec, $files
 bindd = $mainMod SHIFT, E, Launch Editor , exec, $editor
