--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,3 +9,5 @@ font_size 12.0
 
 include ~/.cache/wal/colors-kitty.conf
 map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i --tac
+
+allow_remote_control yes
