--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -306,7 +306,7 @@ $screenrecord-menu = ~/.config/hypr/scripts/screenrecord-menu.sh
 
 bindd = $mainMod, Return, Launch Terminal, exec, $term
 bindd = $mainMod SHIFT, Return, Launch Second Terminal, exec, $term2
-bindd = $mainMod CTRL, Return, Launch Floating Terminal, exec, [float] $term2
+bindd = $mainMod CTRL, Return, Launch Floating Terminal, exec, [float; center; size 950 600] $term2
 
 bindd = $mainMod, E, Launch File Manager, exec, $files
 bindd = $mainMod SHIFT, E, Launch Editor , exec, $editor
